--- a/about.html
+++ b/about.html
@@ -275,7 +275,8 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/prince00raj/"><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href="https://www.linkedin.com/in/prince00raj/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -311,7 +312,8 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/vanshika-a614151aa/"><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href="https://www.linkedin.com/in/vanshika-a614151aa/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -329,7 +331,9 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/harsh-sukhija/"><i class="bi bi-linkedin"></i></a>
+                  <!-- https://www.linkedin.com/in/orbitlinker01/ -->
+                  <!-- <a href="https://www.linkedin.com/in/harsh-sukhija/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
