--- a/team.html
+++ b/team.html
@@ -113,7 +113,8 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/prince00raj/"><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href="https://www.linkedin.com/in/prince00raj/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -149,7 +150,8 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/vanshika-a614151aa/"><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href="https://www.linkedin.com/in/vanshika-a614151aa/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -167,7 +169,9 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/harsh-sukhija/"><i class="bi bi-linkedin"></i></a>
+                  <!-- https://www.linkedin.com/in/orbitlinker01/ -->
+                  <!-- <a href="https://www.linkedin.com/in/harsh-sukhija/"><i class="bi bi-linkedin"></i></a> -->
+                  <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
