--- a/about.html
+++ b/about.html
@@ -367,12 +367,13 @@
                   <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/shipra-jha-31b26921b/"><i class="bi bi-linkedin"></i></a>
+                  <!-- <a href="https://www.linkedin.com/in/shipra-jha-31b26921b/"><i class="bi bi-linkedin"></i></a> -->
+                   <a href="https://www.linkedin.com/in/orbitlinker01/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Shipra Jha</h4>
-                <span>Technical Project Associate</span>
+                <span>Project Associate</span>
               </div>
             </div>
           </div><!-- End Team Member -->
